--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "rules": {
     "no-unused-expressions": ["error", { "allowShortCircuit": true, "allowTernary": true }],
     "no-param-reassign": ["error", { "props": false }],
-    "no-plusplus": 0
+    "no-plusplus": 0,
+    "no-console": 0
   }
 }
