--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "some demos",
   "scripts": {
-    "start": "node ./build/dev.js"
+    "start": "node ./build/dev.js",
+    "build": "NODE_ENV=production node ./build/build.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
